# projects

OpenPoseTrackOnLine/: CMakeLists.txt  data.cpp  data.h  main.cpp  processor.h  thread_pool.h  utils.cpp  utils.h
OpenPoseTrackOnLine/OpenPose/: openposetrack.cpp  openposetrack.h
OpenPoseTrackOnLine/client/: CMakeLists.txt  client.cpp  client.h  main.cpp
OpenPoseTrackOnLine/server/: CMakeLists.txt  main.cpp  server.cpp  server.h
